--- a/src/components/shared/Card/Card.module.scss
+++ b/src/components/shared/Card/Card.module.scss
@@ -7,6 +7,9 @@
   flex-direction: column;
   transition: all 0.15s ease-in-out;
   position: relative;
+  opacity: 0;
+
+  animation: fadeIn 0.5s ease-out forwards;
 
   &__icons {
     display: flex;
@@ -151,5 +154,11 @@
   &__img {
     width: 100%;
     height: 100%;
+  }
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
   }
 }
