--- a/src/components/shared/CategoriesAndSearch/components/Aside/Aside.module.scss
+++ b/src/components/shared/CategoriesAndSearch/components/Aside/Aside.module.scss
@@ -9,6 +9,11 @@
     position: sticky;
   }
 
+  &__skeleton {
+    height: 48px !important;
+    margin-bottom: 3px;
+  }
+
   @media (max-width: 870px) {
     display: none !important;
   }
