--- a/src/app/Basket/Basket.module.scss
+++ b/src/app/Basket/Basket.module.scss
@@ -86,6 +86,10 @@
       }
     }
 
+    &_deleting {
+      background-color: $grayLoading;
+    }
+
     &__pending {
       color: $grayLight3;
     }
