--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -225,6 +225,16 @@ main {
   @extend %inter_500_19_20;
 }
 
+.nodata {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 400px;
+  width: 100%;
+  @extend %inter_500_19_20;
+}
+
 .MuiSkeleton-root {
   background-color: rgba(0, 0, 0, 0.11) !important;
 }
