--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -10,6 +10,7 @@ $secondaryOpacity02: rgba(233, 188, 124, 0.2);
 $grayLight: rgb(134, 134, 134);
 $grayLight2: rgb(243, 241, 241);
 $grayLight3: rgb(179, 179, 179);
+$grayLoading: rgb(238, 236, 236);
 $red: rgb(247, 0, 0);
 
 $background: rgb(252, 249, 243);
@@ -17,6 +18,17 @@ $secondary: rgb(255, 237, 212);
 $primary: rgb(210, 143, 50);
 $accent: rgb(234, 171, 83);
 $hover: rgb(228, 159, 62);
+
+%disableButton {
+  cursor: not-allowed !important;
+  border: 1px solid $grayLight !important;
+  background-color: $grayLight2 !important;
+  color: $grayLight3 !important;
+
+  &:hover {
+    background-color: $grayLoading !important;
+  }
+}
 
 %buttonStyles {
   background-color: $accent;
