--- a/src/components/shared/Card/Card.module.scss
+++ b/src/components/shared/Card/Card.module.scss
@@ -98,6 +98,10 @@
     width: 100%;
     padding: clamp(5px, 1.4vw, 10px) 10px !important;
 
+    &_disable {
+      @extend %disableButton;
+    }
+
     &_active {
       background-color: rgba(233, 23, 23, 0.3) !important;
       color: rgb(233, 23, 23) !important;
