--- a/src/components/shared/Counter/Counter.module.scss
+++ b/src/components/shared/Counter/Counter.module.scss
@@ -25,16 +25,7 @@
   }
 
   &__disable {
-    cursor: not-allowed;
-    border: 1px solid $grayLight;
-    background-color: $grayLight2;
-    color: $grayLight3;
-
-    &:hover {
-      border: 1px solid $grayLight;
-      background-color: rgb(238, 236, 236);
-      color: $grayLight3;
-    }
+    @extend %disableButton;
   }
 
   &__field {
