--- a/src/components/shared/CategoriesAndSearch/CategoriesAndSearch.module.scss
+++ b/src/components/shared/CategoriesAndSearch/CategoriesAndSearch.module.scss
@@ -40,6 +40,10 @@
     @media (max-width: 600px) {
       flex: 1 1 auto;
     }
+
+    &_disable {
+      @extend %disableButton;
+    }
   }
 
   &__search {
