--- a/src/components/shared/Card/Card.module.scss
+++ b/src/components/shared/Card/Card.module.scss
@@ -103,6 +103,7 @@
     }
 
     &_active {
+      font-size: clamp(16px, 2.5vw, 18px) !important;
       background-color: rgba(233, 23, 23, 0.3) !important;
       color: rgb(233, 23, 23) !important;
       border: 2px solid rgb(233, 23, 23) !important;
@@ -114,6 +115,7 @@
     }
 
     &_inactive {
+      font-size: clamp(16px, 2.5vw, 18px) !important;
       background-color: rgba(85, 228, 85, 0.3) !important;
       color: rgb(6, 114, 6) !important;
       border: 2px solid rgb(6, 114, 6) !important;
