--- a/src/components/shared/RegisterOrLogin/RegisterOrLogin.module.scss
+++ b/src/components/shared/RegisterOrLogin/RegisterOrLogin.module.scss
@@ -88,6 +88,10 @@
     padding: 7px 10px;
     transition: all 0.1s ease-in-out;
     font-weight: 500;
+
+    &_disable {
+      @extend %disableButton;
+    }
   }
 
   &__no_profile {
