--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -252,3 +252,9 @@ main {
 #nprogress .spinner-icon {
   display: none;
 }
+
+.gray_circle {
+  width: 25px !important;
+  height: 25px !important;
+  color: $grayLight;
+}
