--- a/src/components/shared/RegisterOrLogin/RegisterOrLogin.module.scss
+++ b/src/components/shared/RegisterOrLogin/RegisterOrLogin.module.scss
@@ -88,6 +88,10 @@
     padding: 7px 10px;
     transition: all 0.1s ease-in-out;
     font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 43px;
 
     &_disable {
       @extend %disableButton;
