--- a/src/components/shared/CategoriesAndSearch/CategoriesAndSearch.module.scss
+++ b/src/components/shared/CategoriesAndSearch/CategoriesAndSearch.module.scss
@@ -91,6 +91,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      flex-direction: column;
       height: 400px;
       width: 100%;
       text-align: center;
