--- a/src/components/shared/Card/Card.module.scss
+++ b/src/components/shared/Card/Card.module.scss
@@ -53,7 +53,7 @@
   }
 
   &__img {
-    background-color: $secondary;
+    background-color: $secondaryLight;
     align-self: center;
     width: 100%;
     aspect-ratio: 1 / 1;
