--- a/src/app/(product)/createProduct/Photo/Photo.scss
+++ b/src/app/(product)/createProduct/Photo/Photo.scss
@@ -34,7 +34,7 @@
   }
 
   &__add {
-    background-color: $secondary;
+    background-color: $secondaryLight;
     width: 100%;
     border-radius: 10px;
     height: clamp(400px, 30vw, 491px);
@@ -69,7 +69,7 @@
   }
 
   &__item {
-    background-color: $secondary;
+    background-color: $secondaryLight;
     aspect-ratio: 1 / 1;
     cursor: pointer;
     position: relative;
@@ -110,7 +110,7 @@
 .images_upload {
   width: 100%;
   margin-bottom: 20px;
-  background-color: $secondary;
+  background-color: $secondaryLight;
   height: clamp(400px, 30vw, 491px);
   cursor: pointer;
 
