--- a/src/app/(product)/product/[id]/Product.module.scss
+++ b/src/app/(product)/product/[id]/Product.module.scss
@@ -47,7 +47,7 @@
   }
 
   &__image_box {
-    background-color: $secondary;
+    background-color: $secondaryLight;
     width: 100%;
     height: 100%;
     @media (max-width: 1307px) {
