--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -7,6 +7,7 @@ $primaryOpacity01: rgba(210, 143, 50, 0.1);
 $primaryOpacity005: rgba(210, 143, 50, 0.05);
 $secondaryDarker: rgb(255, 225, 184);
 $secondaryOpacity02: rgba(233, 188, 124, 0.2);
+$secondaryLight: rgb(255, 245, 229);
 $grayLight: rgb(134, 134, 134);
 $grayLight2: rgb(243, 241, 241);
 $grayLight3: rgb(179, 179, 179);
