--- a/src/app/components/CategoriesBox/CategoriesBox.module.scss
+++ b/src/app/components/CategoriesBox/CategoriesBox.module.scss
@@ -1,6 +1,7 @@
 @import "@/assets/styles/variables.scss";
 
 .categories {
+  @include appear(25%);
   & > h2 {
     @extend %inter_700_25_35;
     text-align: center;
