--- a/src/components/shared/Card/Card.module.scss
+++ b/src/components/shared/Card/Card.module.scss
@@ -7,10 +7,9 @@
   flex-direction: column;
   transition: all 0.15s ease-in-out;
   position: relative;
-  opacity: 0;
-
-  animation: fadeIn 0.5s ease-out forwards;
-
+  // opacity: 0;
+  //animation: fadeIn 0.5s ease-out forwards;
+  @include appear(25%);
   &__save {
     color: red;
   }
@@ -179,8 +178,8 @@
   }
 }
 
-@keyframes fadeIn {
-  to {
-    opacity: 1;
-  }
-}
+// @keyframes fadeIn {
+//   to {
+//     opacity: 1;
+//   }
+// }
